unpackaged/main/default/objects/Case/fields/Product_Portal__c.field-meta.xml
<CustomField>
    <fullName>Product_Portal__c</fullName>
    <description>Picklist of products showed to user in the Support Portal. It maps to its Product__c equivalent</description>
    <inlineHelpText>Select which version this case is in regards to</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video Cloud</fullName>
                <default>true</default>
                <label>Video Cloud</label>
            </value>
            <value>
                <fullName>Zencoder</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Ooyala</fullName>
            </value>
            <value>
                <fullName>TV App Agency</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Wicket Labs</fullName>
            </value>
            <value>
                <fullName>Brightcove Interactivity (HapYak)</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
                <isActive>false</isActive>
                <label>Audience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>