unpackaged/main/default/objects/Case/fields/Request_closure__c.field-meta.xml
<CustomField>
    <fullName>Request_closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request closure?</label>
    <type>Checkbox</type>
</CustomField>