unpackaged/main/default/objects/Case/fields/RespTime_Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>RespTime_Missed_SLA__c</fullName>
    <description>This field is true if we have missed any Response Time SLA for the whole life of the case</description>
    <formula>IF(RespTime_Counter_MissedSLA__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Case SLA</label>
    <type>Checkbox</type>
</CustomField>