unpackaged/main/default/objects/Case/fields/RevOpsMyCase__c.field-meta.xml
<CustomField>
    <fullName>RevOpsMyCase__c</fullName>
    <formula>SuppliedEmail =  $User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RevOpsMyCase</label>
    <type>Checkbox</type>
</CustomField>