unpackaged/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Case_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>CDN Slowness</fullName>
            </value>
            <value>
                <fullName>Client/delivery error</fullName>
            </value>
            <value>
                <fullName>CSM/Sales/BGS/Finance</fullName>
            </value>
            <value>
                <fullName>Customer training gaps</fullName>
            </value>
            <value>
                <fullName>Data not available</fullName>
            </value>
            <value>
                <fullName>Data processing</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>False-positive alert</fullName>
            </value>
            <value>
                <fullName>Input latency</fullName>
            </value>
            <value>
                <fullName>Live system failure</fullName>
            </value>
            <value>
                <fullName>Source Encoder</fullName>
            </value>
            <value>
                <fullName>Source Issue (network, upload speed, ISP)</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>EOL (End of Life)</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>