unpackaged/main/default/objects/Case/fields/Root_Cause_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Sub_Reason__c</fullName>
    <label>Root Cause Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd party/vendor</fullName>
            </value>
            <value>
                <fullName>Accedo</fullName>
            </value>
            <value>
                <fullName>Ad Network</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Ad Partner</fullName>
            </value>
            <value>
                <fullName>Akamai</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Aspera</fullName>
            </value>
            <value>
                <fullName>Backlogged</fullName>
            </value>
            <value>
                <fullName>BGS Retainer / Warranty</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Brightcove</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Configuration / Enviroment</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>CSM Follow-up</fullName>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Dalet - Flex</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Documentation Incomplete</fullName>
            </value>
            <value>
                <fullName>Documentation Missing</fullName>
            </value>
            <value>
                <fullName>Documentation Wrong</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Evergent</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>How to / Knowledge gap</fullName>
            </value>
            <value>
                <fullName>Limelight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>