unpackaged/main/default/objects/Case/fields/Sales_Ops_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Ops Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SalesOpsCases</relationshipName>
    <type>Lookup</type>
</CustomField>