unpackaged/main/default/objects/Case/fields/Sales_Ops_Escalate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Operation process for escalation into the Slack room salesops_help</description>
    <inlineHelpText>Check this checkbox off for urgent help.</inlineHelpText>
    <label>Sales Ops Escalate</label>
    <type>Checkbox</type>
</CustomField>