unpackaged/main/default/objects/Case/fields/Sales_Ops_Question_subject__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Question_subject__c</fullName>
    <description>This describes specific subjects based on the selected Sales Operation Question area value</description>
    <label>SalesOps Question subject</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesOps_Question_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Resell</fullName>
            </value>
            <value>
                <fullName>Amend contract</fullName>
            </value>
            <value>
                <fullName>Approval issue</fullName>
            </value>
            <value>
                <fullName>Beacon Live</fullName>
            </value>
            <value>
                <fullName>BGS</fullName>
            </value>
            <value>
                <fullName>Bundle issue</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract add-on</fullName>
            </value>
            <value>
                <fullName>Contract naming</fullName>
            </value>
            <value>
                <fullName>Contract renewal</fullName>
            </value>
            <value>
                <fullName>Custom Bundle</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Enterprise BYOCDN</fullName>
            </value>
            <value>
                <fullName>Enterprise DRM</fullName>
            </value>
            <value>
                <fullName>Entry Points Pricing</fullName>
            </value>
            <value>
                <fullName>Evergent</fullName>
            </value>
            <value>
                <fullName>Feature request</fullName>
            </value>
            <value>
                <fullName>Legacy Contract</fullName>
            </value>
            <value>
                <fullName>Multi CDN</fullName>
            </value>
            <value>
                <fullName>One Off Request</fullName>
            </value>
            <value>
                <fullName>Oppty xMRR - xACV</fullName>
            </value>
            <value>
                <fullName>PAS LA</fullName>
            </value>
            <value>
                <fullName>Price books</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Quote approval</fullName>
            </value>
            <value>
                <fullName>Quote custom item</fullName>
            </value>
            <value>
                <fullName>Quote Pricing</fullName>
            </value>
            <value>
                <fullName>Quote standard item</fullName>
            </value>
            <value>
                <fullName>Rate Cards manual adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>