unpackaged/main/default/objects/Case/fields/Sales_Ops_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Ops Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SalesOpsCases</relationshipName>
    <type>Lookup</type>
</CustomField>