unpackaged/main/default/objects/Case/fields/SalesOps_Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>SalesOps_Case_Resolution__c</fullName>
    <label>SalesOps Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesOps_Question_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Answer provided</fullName>
            </value>
            <value>
                <fullName>ACV/TotalACV adjustment</fullName>
            </value>
            <value>
                <fullName>client hand-off</fullName>
                <label>Client hand-off</label>
            </value>
            <value>
                <fullName>Client Termination</fullName>
            </value>
            <value>
                <fullName>Closed Duplicated</fullName>
                <label>Closed Duplicate</label>
            </value>
            <value>
                <fullName>Compensation issue</fullName>
            </value>
            <value>
                <fullName>Contract ID update</fullName>
            </value>
            <value>
                <fullName>Data Cleanup</fullName>
            </value>
            <value>
                <fullName>Documentation Created</fullName>
            </value>
            <value>
                <fullName>Documentation Provided</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>E-MRR adjustment</fullName>
                <label>E/MRR adjustment</label>
            </value>
            <value>
                <fullName>Manual Adjustment</fullName>
            </value>
            <value>
                <fullName>New MRR adjustment</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
                <label>Opportunity Created or Removed</label>
            </value>
            <value>
                <fullName>Opportunity Splits/Team</fullName>
            </value>
            <value>
                <fullName>Oppty - Workflow Create</fullName>
            </value>
            <value>
                <fullName>Oppty - Workflow Edit</fullName>
            </value>
            <value>
                <fullName>Owner change</fullName>
            </value>
            <value>
                <fullName>Parent account update</fullName>
            </value>
            <value>
                <fullName>Product item customization</fullName>
            </value>
            <value>
                <fullName>Provided or Removed Tool Access</fullName>
            </value>
            <value>
                <fullName>Rate cards issue</fullName>
            </value>
            <value>
                <fullName>Redirected To Appropropriate Resource</fullName>
            </value>
            <value>
                <fullName>Report Created</fullName>
            </value>
            <value>
                <fullName>RevOps portal</fullName>
            </value>
            <value>
                <fullName>Routing region update</fullName>
            </value>
            <value>
                <fullName>Routing rule update</fullName>
            </value>
            <value>
                <fullName>Routing team update</fullName>
            </value>
            <value>
                <fullName>Salesforce Permission Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>