unpackaged/main/default/objects/Case/fields/SalesOps_Question_Area__c.field-meta.xml
<CustomField>
    <fullName>SalesOps_Question_Area__c</fullName>
    <label>SalesOps Question Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Questions</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Onboarding_and_training</fullName>
                <label>Onboarding &amp; Training</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Products_and_Pricing</fullName>
                <label>Products &amp; Pricing</label>
            </value>
            <value>
                <fullName>Sales Tools</fullName>
            </value>
            <value>
                <fullName>SFDC_Accounts</fullName>
                <label>SFDC - Accounts</label>
            </value>
            <value>
                <fullName>SFDC - Administration</fullName>
            </value>
            <value>
                <fullName>SFDC - Leads &amp; Activities</fullName>
                <label>SFDC - Leads Contacts &amp; Activities</label>
            </value>
            <value>
                <fullName>SFDC - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>SFDC_Opportunities</fullName>
                <label>SFDC - Opportunities</label>
            </value>
            <value>
                <fullName>SFDC - Reporting</fullName>
            </value>
            <value>
                <fullName>SFDC - BCAccount</fullName>
            </value>
            <value>
                <fullName>Routing requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>