unpackaged/main/default/objects/Case/fields/Scheduled_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Ticket__c</fullName>
    <description>Creates an automatic ticket related to this original case at the scheduled time.</description>
    <inlineHelpText>Creates an automatic ticket related to this original case at the scheduled time.</inlineHelpText>
    <label>Scheduled Ticket</label>
    <type>DateTime</type>
</CustomField>