unpackaged/main/default/objects/Case/fields/Send_Mass_Update__c.field-meta.xml
<CustomField>
    <fullName>Send_Mass_Update__c</fullName>
    <description>This field is used by the Mass Update tool to trigger a workflow and send email updates to cases</description>
    <inlineHelpText>If you don&#39;t know what this field does DO NOT USE IT</inlineHelpText>
    <label>Send Mass Update?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Send an update to all selected cases using the Mass Update Template</fullName>
            </value>
            <value>
                <fullName>No - Do not send any updates to any of the cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>