unpackaged/main/default/objects/Case/fields/Send_SLA_Slack_Alert__c.field-meta.xml
<CustomField>
    <fullName>Send_SLA_Slack_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, Zapier sends Slack alert.</description>
    <label>Send SLA Slack Alert</label>
    <type>Checkbox</type>
</CustomField>