unpackaged/main/default/objects/Case/fields/SLA_due_date_time2__c.field-meta.xml
<CustomField>
    <fullName>SLA_due_date_time2__c</fullName>
    <label>SLA due Date/Time</label>
    <type>DateTime</type>
</CustomField>