unpackaged/main/default/objects/Case/fields/SLA_Folloup_owner__c.field-meta.xml
<CustomField>
    <fullName>SLA_Folloup_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TS Manager to follow up the missed SLA.</description>
    <label>SLA Follow-up owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>