unpackaged/main/default/objects/Case/fields/SLA_Followup__c.field-meta.xml
<CustomField>
    <fullName>SLA_Followup__c</fullName>
    <description>TS manager must check the case and write why the case has missed the SLA.</description>
    <label>SLA Follow-up</label>
    <type>TextArea</type>
</CustomField>