unpackaged/main/default/objects/Case/fields/SLA_Followup_completed_c__c.field-meta.xml
<CustomField>
    <fullName>SLA_Followup_completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It&#39;s true if ANY of the SLA is missed (both FR and/or Following responses)</description>
    <label>SLA Follow-up completed</label>
    <type>Checkbox</type>
</CustomField>