unpackaged/main/default/objects/Case/fields/Slack_Channel_Auto_Creation__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Auto_Creation__c</fullName>
    <description>This case will get an slack channel automatically created if the value is true</description>
    <formula>Account.Support_Slack_Channel_Auto_Creation__c</formula>
    <label>Support Slack Channel Auto Creation</label>
    <type>Checkbox</type>
</CustomField>