unpackaged/main/default/objects/Case/fields/Slack_Channel_Created__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WIll be enabled when a Slack channel is created to communicate with the customer</description>
    <inlineHelpText>A slack channel was created to communicate with the customer</inlineHelpText>
    <label>Active Slack Channel</label>
    <type>Checkbox</type>
</CustomField>