unpackaged/main/default/objects/Case/fields/Slack_Channel_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Creation_Date__c</fullName>
    <description>Timestamp when the channel was created</description>
    <label>Slack Channel Creation Date</label>
    <type>DateTime</type>
</CustomField>