unpackaged/main/default/objects/Case/fields/Slack_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Slack_Expiration_Date__c</fullName>
    <description>Date and time when the access to the slack channel will expire for the case contact</description>
    <label>Slack Expiration Date</label>
    <type>DateTime</type>
</CustomField>