unpackaged/main/default/objects/Case/fields/Slack_Last_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Slack_Last_Expiration__c</fullName>
    <description>To validate if the expiration date should be updated</description>
    <label>Slack Last Extension Request</label>
    <type>DateTime</type>
</CustomField>