unpackaged/main/default/objects/Case/fields/Support_Package__c.field-meta.xml
<CustomField>
    <fullName>Support_Package__c</fullName>
    <description>Video Cloud support package</description>
    <label>Support Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum+</fullName>
            </value>
            <value>
                <fullName>DealDesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>