unpackaged/main/default/objects/Case/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Response</label>
    <type>Checkbox</type>
</CustomField>