unpackaged/main/default/objects/Case/fields/SurveyEmailResponder__c.field-meta.xml
<CustomField>
    <fullName>SurveyEmailResponder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the object survey email responder</description>
    <label>SurveyEmailResponder</label>
    <referenceTo>SurveyEmailResponder__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>