unpackaged/main/default/objects/Case/fields/T2_Escalation_Follow_up_Wanted__c.field-meta.xml
<CustomField>
    <fullName>T2_Escalation_Follow_up_Wanted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T2 Escalation - Follow-up Wanted</label>
    <type>Checkbox</type>
</CustomField>