unpackaged/main/default/objects/Case/fields/T2_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>T2_Escalation_Notes__c</fullName>
    <inlineHelpText>T2 to provide explanation on why it was a poor escalation here</inlineHelpText>
    <label>Incomplete Escalation to T2 Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>