unpackaged/main/default/objects/Case/fields/T2_Escalation_Process_Reason__c.field-meta.xml
<CustomField>
    <fullName>T2_Escalation_Process_Reason__c</fullName>
    <label>T2 Escalation Process Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Escalation_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Akamai Analytics Setup</fullName>
            </value>
            <value>
                <fullName>Akamai Analytics Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Akamai CDN</fullName>
            </value>
            <value>
                <fullName>Android SDK</fullName>
            </value>
            <value>
                <fullName>BC Open Source</fullName>
            </value>
            <value>
                <fullName>BYO/Named CDN Setup</fullName>
            </value>
            <value>
                <fullName>CMS Connector</fullName>
            </value>
            <value>
                <fullName>Data Collection API</fullName>
            </value>
            <value>
                <fullName>Enable Digital Master</fullName>
            </value>
            <value>
                <fullName>DRM Setup</fullName>
            </value>
            <value>
                <fullName>IOS SDK</fullName>
            </value>
            <value>
                <fullName>Ooyala API</fullName>
            </value>
            <value>
                <fullName>Ooyala Live</fullName>
            </value>
            <value>
                <fullName>P1 - Brightcove Live</fullName>
            </value>
            <value>
                <fullName>SSO Setup</fullName>
            </value>
            <value>
                <fullName>SSO Troubleshooting</fullName>
            </value>
            <value>
                <fullName>[Zen] Invalid Syntax</fullName>
            </value>
            <value>
                <fullName>[Zen] Integration Library</fullName>
            </value>
            <value>
                <fullName>[Zen] DRM</fullName>
            </value>
            <value>
                <fullName>[Zen] API and Custom Dev</fullName>
            </value>
            <value>
                <fullName>Playback Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>