unpackaged/main/default/objects/Case/fields/T2_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>T2_Escalation_Reason__c</fullName>
    <label>T2 Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Spent</fullName>
            </value>
            <value>
                <fullName>Lack of Knowledge/Training</fullName>
            </value>
            <value>
                <fullName>Lack of Documentation</fullName>
            </value>
            <value>
                <fullName>Straight to T2 - Per Process</fullName>
            </value>
            <value>
                <fullName>Per Leadership Instruction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>