unpackaged/main/default/objects/Case/fields/T2_Escalation_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>T2_Escalation_Reason_Other__c</fullName>
    <label>T2 Escalation Reason Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>