unpackaged/main/default/objects/Case/fields/T2_Ownership_Taken__c.field-meta.xml
<CustomField>
    <fullName>T2_Ownership_Taken__c</fullName>
    <label>T2 Ownership Taken</label>
    <type>DateTime</type>
</CustomField>