unpackaged/main/default/objects/Case/fields/T2_Prod_Case_Escalated_By__c.field-meta.xml
<CustomField>
    <fullName>T2_Prod_Case_Escalated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T2 Prod Case Escalated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prod_Case_Escalated</relationshipName>
    <type>Lookup</type>
</CustomField>