unpackaged/main/default/objects/Case/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Case Triage Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2 Prod</fullName>
            </value>
            <value>
                <fullName>Tier 2 Dev</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Support Operations</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>